--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Zurb Foundation 5 generator for Yeoman",
   "keywords": [
-    "yeoman-generator"
+    "yeoman-generator, foundation5, zurb, foundation"
   ],
   "homepage": "https://github.com/juliancwirko/generator-zf5",
   "bugs": "https://github.com/juliancwirko/generator-zf5/issues",
