--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -1,6 +1,16 @@
 {
   "name": "zf5",
-  "version": "0.1.2",
+  "description": "Yeoman generator for Zurb Foundation 5",
+  "version": "0.1.3",
+  "homepage": "https://github.com/juliancwirko/generator-zf5",
+  "author": {
+    "name": "Julian Ćwirko",
+    "email": "julian.cwirko@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/juliancwirko/generator-zf5.git"
+  },
   "devDependencies": {
     "node-sass": "~0.7.0",
     "grunt": "~0.4.1",
