--- a/app/templates/bower.json
+++ b/app/templates/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "zf5",
+  "name": "zf5_project",
   "dependencies": {
     "foundation": "zurb/bower-foundation" <% if (fontAwesome) { %> ,
     "font-awesome": "~4.0.3" <% } %>
