--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-zf5",
-  "version": "0.3.3",
-  "description": "Zurb Foundation 5 generator for Yeoman",
+  "version": "0.3.4",
+  "description": "Yeoman generator for Zurb Foundation 5",
   "keywords": [
     "yeoman-generator", "foundation5", "zurb", "foundation"
   ],
