--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -16,8 +16,9 @@
     "grunt": "~0.4.2",
     "grunt-contrib-watch": "git://github.com/gruntjs/grunt-contrib-watch",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-jshint": "~0.7.2",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-connect": "~0.5.0",
     "grunt-usemin": "~2.0.2",
     "grunt-sass": "~0.9.0"
   }
