--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -12,14 +12,18 @@
     "url": ""
   },
   "devDependencies": {
-    "node-sass": "~0.7.0",
+    "node-sass": "~0.8.1",
     "grunt": "~0.4.2",
     "grunt-contrib-watch": "git://github.com/gruntjs/grunt-contrib-watch",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-uncss": "~0.1.9",
+    "grunt-contrib-uglify": "~0.3.2",
+    "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-jshint": "~0.8.0",
-    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-connect": "~0.6.0",
     "grunt-usemin": "~2.0.2",
-    "grunt-sass": "~0.9.0"
+    "grunt-sass": "~0.10.0"
   }
 }
