--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "generator-zf5",
-  "version": "0.5.3",
+  "version": "0.6.0",
   "description": "Yeoman generator for Zurb Foundation 5",
-  "keywords": [
-    "yeoman-generator", "foundation5", "zurb", "foundation"
-  ],
+  "license": "MIT",
+  "main": "app/index.js",
+  "repository": "juliancwirko/generator-zf5",
   "homepage": "https://github.com/juliancwirko/generator-zf5",
   "bugs": "https://github.com/juliancwirko/generator-zf5/issues",
   "author": {
@@ -12,30 +12,26 @@
     "email": "Ćwirko",
     "url": "https://github.com/juliancwirko"
   },
-  "main": "app/index.js",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/juliancwirko/generator-zf5.git"
+  "engines": {
+    "node": ">=0.10.0"
   },
   "scripts": {
     "test": "mocha"
   },
+  "files": [
+    "app"
+  ],
+  "keywords": [
+    "yeoman-generator", "foundation5", "zurb", "foundation"
+  ],
   "dependencies": {
-    "yeoman-generator": "~0.16.0"
+    "yeoman-generator": "~0.16.0",
+    "chalk": "~0.4.0"
   },
   "devDependencies": {
-    "mocha": ">=1.16.2"
+    "mocha": "*"
   },
   "peerDependencies": {
     "yo": ">=1.0.0"
-  },
-  "engines": {
-    "node": ">=0.8.0",
-    "npm": ">=1.2.10"
-  },
-  "licenses": [
-    {
-      "type": "MIT"
-    }
-  ]
+  }
 }
