--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -12,17 +12,17 @@
     "url": ""
   },
   "devDependencies": {
-    "node-sass": "~0.8.1",
+    "node-sass": "~0.8.3",
     "grunt": "~0.4.3",
-    "grunt-contrib-watch": "git://github.com/gruntjs/grunt-contrib-watch",
+    "grunt-contrib-watch": "~0.6.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-jshint": "~0.9.2",
     "grunt-contrib-connect": "~0.7.1",
-    "grunt-bower-install": "~1.0.2",
+    "grunt-bower-install": "~1.3.0",
     "grunt-usemin": "~2.0.2",
     "grunt-sass": "~0.11.0"
   }
