--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -15,7 +15,7 @@
     "node-sass": "~0.8.6",
     "grunt-sass": "~0.12.1",<% } else { %>
     "grunt-contrib-sass": "~0.7.3",<% } %>
-    "grunt": "~0.4.4",
+    "grunt": "~0.4.5",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
@@ -24,7 +24,7 @@
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-connect": "~0.7.1",
-    "grunt-bower-install": "~1.4.1",
+    "grunt-wiredep": "~1.7.0",
     "grunt-usemin": "~2.1.1",
     "grunt-contrib-imagemin": "0.7.0",
     "grunt-newer": "~0.7.0"
