--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -12,21 +12,22 @@
     "url": ""
   },
   "devDependencies": {<% if (!compass) { %>
-    "node-sass": "~0.8.6",
-    "grunt-sass": "~0.12.1",<% } else { %>
+    "node-sass": "~0.9.3",
+    "grunt-sass": "~0.14.0",<% } else { %>
     "grunt-contrib-sass": "~0.7.3",<% } %>
-    "grunt": "~0.4.5",
+    "grunt": "~0.4.5",<% if (jade) { %>
+    "grunt-contrib-jade": "~0.12.0",<% } %>
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-cssmin": "~0.10.0",
+    "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-connect": "~0.7.1",
-    "grunt-wiredep": "~1.7.0",
-    "grunt-usemin": "~2.1.1",
-    "grunt-contrib-imagemin": "0.7.0",
+    "grunt-contrib-connect": "~0.8.0",
+    "grunt-wiredep": "~1.8.0",
+    "grunt-usemin": "~2.2.0",
+    "grunt-contrib-imagemin": "0.7.1",
     "grunt-newer": "~0.7.0"
   }
 }
