--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -2,6 +2,7 @@
   "name": "zf5_project",
   "description": "",
   "version": "0.0.1",
+  "description": "",
   "homepage": "",
   "author": {
     "name": "",
