--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -13,9 +13,9 @@
     "url": ""
   },
   "devDependencies": {
-    "load-grunt-tasks": "~0.6.0",<% if (!compass) { %>
+    "load-grunt-tasks": "~0.6.0",<% if (libsass) { %>
     "node-sass": "~0.9.3",
-    "grunt-sass": "~0.14.0",<% } else { %>
+    "grunt-sass": "~0.14.1",<% } else { %>
     "grunt-contrib-sass": "~0.8.1",<% } %>
     "grunt": "~0.4.5",<% if (jade) { %>
     "grunt-contrib-jade": "~0.12.0",<% } %>
@@ -27,7 +27,7 @@
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-connect": "~0.8.0",
-    "grunt-wiredep": "~1.8.0",
+    "grunt-wiredep": "~1.9.0",
     "grunt-usemin": "~2.4.0",
     "grunt-contrib-imagemin": "0.8.1",
     "grunt-newer": "~0.7.0"
