--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -13,15 +13,15 @@
     "url": ""
   },
   "devDependencies": {
-    "load-grunt-tasks": "~0.6.0",<% if (libsass) { %>
-    "node-sass": "~0.9.4",
+    "load-grunt-tasks": "~0.6.0",<% if (!compass) { %>
+    "node-sass": "~0.9.6",
     "grunt-sass": "~0.14.2",<% } else { %>
     "grunt-contrib-sass": "~0.8.1",<% } %>
     "grunt": "~0.4.5",<% if (jade) { %>
-    "grunt-contrib-jade": "~0.12.0",<% } %>
+    "grunt-contrib-jade": "~0.13.0",<% } %>
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-copy": "~0.6.0",
     "grunt-contrib-cssmin": "~0.10.0",
     "grunt-contrib-uglify": "~0.6.0",
     "grunt-contrib-concat": "~0.5.0",
