Orbit has be deprecated so I've added the recommended Slick.js slider. See here: http://foundation.zurb.com/docs/components/orbit.html

--- a/app/templates/bower.json
+++ b/app/templates/bower.json
@@ -2,6 +2,7 @@
   "name": "zf5_project",
   "dependencies": {
     "foundation": "zurb/bower-foundation"<% if (fontAwesome) { %>,
-    "font-awesome": "~4.3.0" <% } %>
+    "font-awesome": "~4.3.0" <% } %>,
+    "slick.js": "~1.4.1"
   }
 }
