--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-zf5",
-  "version": "0.9.9",
+  "version": "0.9.10",
   "description": "Yeoman generator for Zurb Foundation 5",
   "license": "MIT",
   "main": "app/index.js",
@@ -25,13 +25,14 @@
     "yeoman-generator", "foundation5", "zurb", "foundation"
   ],
   "dependencies": {
-    "yeoman-generator": "~0.17.7",
-    "chalk": "~0.5.1"
+    "yeoman-generator": "~0.20.2",
+    "chalk": "~1.1.0",
+    "mkdirp": "~0.5.1"
   },
   "devDependencies": {
     "mocha": "*"
   },
   "peerDependencies": {
-    "yo": ">=1.0.0"
+    "yo": "~1.4.7"
   }
 }
