--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -17,8 +17,7 @@
     "node-sass": "~3.3.3",
     "grunt-sass": "~1.0.0",<% } else { %>
     "grunt-contrib-sass": "~0.9.2",<% } %>
-    "grunt": "~0.4.5",<% if (jade) { %>
-    "grunt-contrib-jade": "~0.15.0",<% } %>
+    "grunt": "~0.4.5",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-copy": "~0.8.1",
@@ -31,6 +30,7 @@
     "grunt-usemin": "~3.1.1",
     "grunt-contrib-imagemin": "0.9.4",
     "grunt-newer": "~1.1.1",
-    "grunt-modernizr": "~1.0.0"
+    "autoprefixer": "6.0.3",
+    "grunt-postcss": "~0.6.0"
   }
 }
